// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CToast renders correctly 1`] = `
<div
  aria-atomic="true"
  aria-live="assertive"
  class="c-toast c-fade"
  role="alert"
  style="z-index: 1100; min-width: 350px; position: fixed; top: 0px; right: 0px;"
>
  <div
    class="c-toast-header"
  >
    <strong
      class="c-mr-auto"
    />
     
    <button
      aria-label="Close"
      class="c-ml-2 c-mb-1 c-close"
      type="button"
    >
      ×
    </button>
  </div>
   
  <div
    class="c-toast-body"
  />
</div>
`;

exports[`CToast renders correctly 2`] = `
<div
  aria-atomic="true"
  aria-live="assertive"
  class="c-toast c-show c-fade"
  role="alert"
  style="z-index: 1100; min-width: 350px; position: fixed; top: 0px; left: 0px;"
>
  <div
    class="c-toast-header"
  >
    <strong
      class="c-mr-auto"
    >
      title
    </strong>
     
    <button
      aria-label="Close"
      class="c-ml-2 c-mb-1 c-close"
      type="button"
    >
      ×
    </button>
  </div>
   CToast body
</div>
`;
